Fonctionne sous Linux

--- a/testAndEnjoy.tex
+++ b/testAndEnjoy.tex
@@ -1,12 +1,12 @@
 \documentclass[11pt]{article}
 \usepackage{UPSTI_Document}
-\newcommand{\UPSTIidVersionDocument}{1}
+\newcommand{\UPSTIidVersionDocument}{3}
 \newcommand{\UPSTIidClasse}{2}
 \newcommand{\UPSTIidTypeDocument}{1}
 \newcommand{\UPSTItitreEnTete}{Analyse des Systèmes Linéaires Continus et Invariants}
 \newcommand{\UPSTItitreEnTetePages}{Automatique}      
 \newcommand{\UPSTIsousTitreEnTete}{Analyse fréquentielle}      
-\newcommand{\UPSTItitrePreambule}{Titre du cours/TD/...}      
+\newcommand{\UPSTItitrePreambule}{Titre du cours/TD/TP...}      
 %\newcommand{\UPSTItitre}{Titre du cours/TD/...}      
 \newcommand{\UPSTIduree}{1h} 
 \newcommand{\UPSTInumero}{3}
@@ -19,10 +19,11 @@
 \usepackage{blindtext}
 
 \begin{document}
-\UPSTIbuildPage
-
-\tableofcontents
-
-\blinddocument
+	
+	\UPSTIbuildPage
+	
+	\tableofcontents
+	
+	\blinddocument
 
 \end{document}
